[gd_scene load_steps=3 format=3 uid="uid://bf56jk15qq58k"]

[ext_resource type="Script" uid="uid://cgqfdx2x6fgfq" path="res://scripts/game_over_menu.gd" id="1_arass"]
[ext_resource type="Theme" uid="uid://nkmusoqy4meh" path="res://Resources/UI_theme.tres" id="1_i22rp"]

[node name="GameOverMenu" type="Control"]
process_mode = 3
z_index = 99
texture_filter = 1
texture_repeat = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_i22rp")
script = ExtResource("1_arass")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="LossLabel" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Game Over (Placeholder)"
horizontal_alignment = 1

[node name="VictoryLabel" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Victory!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[connection signal="pressed" from="CenterContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
